Fixed SVG overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,8 @@
   body {
     width: 100%;
     height: 100%;
-    
+    max-width: 100%;
+    overflow-x: clip;
   }
   html {
     scroll-behavior: smooth;
